syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.registerandlogin";
option java_outer_classname = "LoginProto";
option objc_class_prefix = "RAL";

package RegisterAndLogin;

// Service定义
service Login {
  rpc Login (LoginRequest) returns (LoginReply) {
  }
}

//request包含用户名、密码和设备id
message LoginRequest {
  string userName = 1;
  string userPwd = 2;
  string deviceId = 3;
}

//Response包含resultCode、resultMsg和新的auth
message LoginReply {
  int32 resultCode = 4;
  string resultMsg = 5;
  string auth = 6;
}
